--- a/question1.html
+++ b/question1.html
@@ -9,7 +9,7 @@ body {
 
 .sidenav {
   height: 100%;
-  width: 250px;
+  width: 200px;
   position: fixed;
   top: 0;
   left: 0;
@@ -35,6 +35,7 @@ body {
 
 .container {
     padding-left: 250px;
+    padding-right: 50px;
 }
 
 h1,h2,b,p {text-align: center;}
@@ -45,7 +46,10 @@ h3 {
 }
 
 .content-intro {
-  margin: 10px;
+  padding-top: 20px;
+  padding-right: 250px;
+  padding-bottom: 20px;
+  padding-left: 250px;
 }
 
 .content {
@@ -53,6 +57,7 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 50px;
 }
 
 .logo {
@@ -63,7 +68,8 @@ h3 {
 
 .form-intro {
   background-color:#EFEFEF;
-  margin: 2px 2px 2px 2px;
+  padding: 10px;
+  margin-top: 10px;
 }
 
 .title {
@@ -74,6 +80,7 @@ h3 {
 .img-icon {
   width: 80px;
   height: 100px;
+  float: left;
 }
 
 .item {
@@ -109,7 +116,10 @@ h3 {
           <p class="content-intro">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae optio rerum dolor, iure velit tempore impedit odio ab corrupti quas sed
              beatae quisquam aperiam nam laboriosam, repellendus ut earum expedita!
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat adipisci sint vel natus error eius quos. Dolor nisi quidem facilis adipisci et libero incidunt! Modi, voluptatum. Beatae id reprehenderit voluptates.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat adipisci sint vel natus error eius quos. 
+             Dolor nisi quidem facilis adipisci et libero incidunt! Modi, voluptatum. Beatae id reprehenderit voluptates.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat neque itaque laboriosam corrupti reiciendis doloribus cupiditate 
+             nemo est minus rem ipsa, vero temporibus iusto commodi, impedit blanditiis atque corporis. Quos.
             </p>
         </div>
 
@@ -117,15 +127,27 @@ h3 {
           <div class="item">
             <div class="title">Lorem ipsum dolor sit amet</div>
             <img class="img-icon" src="./img/css-icon 1.png" />
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat neque itaque laboriosam corrupti reiciendis doloribus cupiditate nemo est minus rem ipsa, vero temporibus iusto commodi, impedit blanditiis atque corporis. Quos.</div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat neque itaque laboriosam corrupti reiciendis doloribus cupiditate 
+            nemo est minus rem ipsa, vero temporibus iusto commodi, impedit blanditiis atque corporis. Quos.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat neque itaque laboriosam corrupti reiciendis doloribus cupiditate 
+            nemo est minus rem ipsa, vero temporibus iusto commodi, impedit blanditiis atque corporis. Quos.
+          </div>
           <div class="item">
             <div class="title">Lorem ipsum dolor sit amet</div>
             <img class="img-icon" src="./img/html-icon 1.png" />
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat neque itaque laboriosam corrupti reiciendis doloribus cupiditate nemo est minus rem ipsa, vero temporibus iusto commodi, impedit blanditiis atque corporis. Quos.</div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat neque itaque laboriosam corrupti reiciendis 
+            doloribus cupiditate nemo est minus rem ipsa, vero temporibus iusto commodi, impedit blanditiis atque corporis. Quos.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat neque itaque laboriosam corrupti reiciendis doloribus cupiditate 
+            nemo est minus rem ipsa, vero temporibus iusto commodi, impedit blanditiis atque corporis. Quos.
+          </div>
           <div class="item">
             <div class="title">Lorem ipsum dolor sit amet</div>
             <img class="img-icon" src="./img/url-icon 1.png" />
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat neque itaque laboriosam corrupti reiciendis doloribus cupiditate nemo est minus rem ipsa, vero temporibus iusto commodi, impedit blanditiis atque corporis. Quos.</div>  
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat neque itaque laboriosam corrupti reiciendis doloribus cupiditate nemo 
+            est minus rem ipsa, vero temporibus iusto commodi, impedit blanditiis atque corporis. Quos.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat neque itaque laboriosam corrupti reiciendis doloribus cupiditate 
+            nemo est minus rem ipsa, vero temporibus iusto commodi, impedit blanditiis atque corporis. Quos.
+          </div>  
         </div>
    
 </body>
